Some duplicate fixes?

--- a/kafka_example/templates/kafka_example/index.html
+++ b/kafka_example/templates/kafka_example/index.html
@@ -10,6 +10,10 @@
 
     <h1>Django Example</h1>
 
+    <p>
+      Click the button to POST a message.
+    </p>
+
     <div class="d-flex">
       <form class="message-form" method="post">{% csrf_token %}
         <div class="row g-2">
