Added data identifier to the example schema

--- a/kafka_example/templates/kafka_example/index.html
+++ b/kafka_example/templates/kafka_example/index.html
@@ -43,6 +43,7 @@
       {% for item in recent %}
         <li>
           <span class="value">{{ item.value }}</span>
+          <span class="data_id">{{ item.data_id }}</span>
           <span class="timestamp">{{ item.timestamp }}</span>
           <span class="delay">({{ item.delay_ms }}ms)</span>
         </li>
