--- a/kafka_example/static/kafka_example/kafka-example.css
+++ b/kafka_example/static/kafka_example/kafka-example.css
@@ -11,12 +11,20 @@ body {
     line-height: 1.3;
 }
 
-.latest {
-    list-style: none;
-    padding: 0;
+.latest .example {
+    font-size: 0.85em;
+    background: #eee;
+    padding: 0 .5em;
+}
+.latest li > span + span {
+    margin-left: .5em;
 }
 .latest .value {
     font-weight: bold;
+}
+.latest .data_id {
+    background-color: #999;
+    padding: .1em .3em;
 }
 .latest .created_date, .latest .timestamp {
     color: #999;
@@ -24,3 +32,8 @@ body {
 .latest .delay {
     font-size: 90%;
 }
+
+.message-form {
+    max-width: 40em;
+}
+
