--- a/kafka_example/templates/kafka_example/index.html
+++ b/kafka_example/templates/kafka_example/index.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load crispy_forms_tags %}
 <!doctype html>
 <html>
   <head>
@@ -26,26 +25,26 @@
       will make up one for you.
     </p>
 
-    <div class="d-flex">
-      <form class="message-form" method="post">{% csrf_token %}
-        <div class="row g-2">
-          <div class="col">
-            {{ form.value }}
-          </div>
-          <div class="col">
-            <button type="submit">Send</button>
-          </div>
-        </div>
-      </form>
-    </div>
+    <form class="message-form" method="post">{% csrf_token %}
+      <div class="input-group">
+        {{ form.value }}
+        <button type="submit" class="btn btn-primary">Send</button>
+      </div>
+    </form>
 
     {% if recent %}
     <h3>Latest archived</h3>
     <ul class="latest">
+      <li class="example">
+        <span class="value">Message</span>
+        <span class="badge data_id">data identifier</span>
+        <span class="timestamp">Time submitted</span>
+        <span class="delay">(delay to archive)</span>
+      </li>
       {% for item in recent %}
         <li>
           <span class="value">{{ item.value }}</span>
-          <span class="data_id">{{ item.data_id }}</span>
+          <span class="badge data_id">{{ item.data_id }}</span>
           <span class="timestamp">{{ item.timestamp }}</span>
           <span class="delay">({{ item.delay_ms }}ms)</span>
         </li>
