--- a/kafka_example/templates/kafka_example/index.html
+++ b/kafka_example/templates/kafka_example/index.html
@@ -1,27 +1,8 @@
-{% load static %}
-<!doctype html>
-<html>
-  <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'kafka_example/kafka-example.css' %}">
-  </head>
-  <body>
+{% extends 'es_common/base.html' %}
 
-    <nav class="navbar navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand">es-example-django</a>
-        <form class="d-flex">
-          <b>{{ user }}</b>
-          {% if user.is_authenticated %}
-            <a href="/logout?url=http://localhost:8080{{ request.path }}">Logout</a>
-          {% else %}
-            <a href="/login?url=http://localhost:8080{{ request.path }}">Login</a>
-          {% endif %}
-        </form>
-      </div>
-    </nav>    
+{% block content %}
 
-    {% if messages %}
+  {% if messages %}
     <div class="messages">
         {% for message in messages %}
         <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>
@@ -29,24 +10,23 @@
         </div>
         {% endfor %}
     </div>
-    {% endif %}
+  {% endif %}
 
+  <h1>Django Example</h1>
 
-    <h1>Django Example</h1>
+  <p>
+    Click the button to POST a message. You can type a message or the server
+    will make up one for you.
+  </p>
 
-    <p>
-      Click the button to POST a message. You can type a message or the server
-      will make up one for you.
-    </p>
+  <form class="message-form" method="post">{% csrf_token %}
+    <div class="input-group">
+      {{ form.value }}
+      <button type="submit" class="btn btn-primary">Send</button>
+    </div>
+  </form>
 
-    <form class="message-form" method="post">{% csrf_token %}
-      <div class="input-group">
-        {{ form.value }}
-        <button type="submit" class="btn btn-primary">Send</button>
-      </div>
-    </form>
-
-    {% if recent %}
+  {% if recent %}
     <h3>Latest archived</h3>
     <ul class="latest">
       <li class="example">
@@ -64,6 +44,6 @@
         </li>
       {% endfor %}
     </ul>
-    {% endif %}
-  </body>
-</html>
+  {% endif %}
+
+{% endblock content %}
