--- a/kafka_example/templates/kafka_example/index.html
+++ b/kafka_example/templates/kafka_example/index.html
@@ -1,4 +1,10 @@
 {% extends 'es_common/base.html' %}
+{% load static %}
+
+{% block css %}
+  {{ block.super }}
+  <link rel="stylesheet" href="{% static 'kafka_example/kafka-example.css' %}">
+{% endblock css %}
 
 {% block content %}
 
