--- a/es_common/templates/es_common/base.html
+++ b/es_common/templates/es_common/base.html
@@ -1,10 +1,13 @@
+{% load compress %}
 {% load static %}
 <!doctype html>
 <html>
   <head>
     {% block css %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'es_common/es-common.css' %}">
+        {% compress css %}
+        <link rel="stylesheet" type="text/x-scss" href="{% static 'css/es-django.scss' %}" rel="stylesheet" media="screen">
+        {% endcompress %}    
     {% endblock css %}
     {% block js %}
     {% endblock js %}
@@ -19,6 +22,12 @@
           {% if user.is_authenticated %}
             <b class="me-2"><a href="{% url 'user-home' %}">{{ user }}</a></b>
             <a href="{% url 'user-logout' %}">Logout</a>
+            <div class="popup-help">(?)
+              <div class="popup card ">
+                <b>Logout</b> currently doesn't redirect properly. After you get to the CILogon page,
+                hit the back button on your browser to come back to this page, then reload.
+              </div>
+            </div>
           {% else %}
             <a href="{% url 'user-login' %}">Login</a>
           {% endif %}
