--- a/kafka_example/templates/kafka_example/index.html
+++ b/kafka_example/templates/kafka_example/index.html
@@ -33,23 +33,31 @@
   </form>
 
   {% if recent %}
-    <h3>Latest archived</h3>
-    <ul class="latest">
-      <li class="example">
-        <span class="value">Message</span>
-        <span class="badge data_id">data identifier</span>
-        <span class="timestamp">Time submitted</span>
-        <span class="delay">(delay to archive)</span>
-      </li>
-      {% for item in recent %}
-        <li>
-          <span class="value">{{ item.value }}</span>
-          <span class="badge data_id">{{ item.data_id }}</span>
-          <span class="timestamp">{{ item.timestamp }}</span>
-          <span class="delay">({{ item.delay_ms }}ms)</span>
-        </li>
-      {% endfor %}
-    </ul>
+    <h3>Latest Archived</h3>
+    {% for item in recent %}
+    <div class="card latest">
+      <div class="card-header">
+        <span class="value">{{ item.value }}</span>
+        <span class="timestamp">{{ item.timestamp }}</span>
+      </div>
+      <div class="details">
+        <ul class="card">
+          <li><b>Data Id</b> {{ item.data_id }}</li>
+          <li><b>Started</b> {{ item.timestamp }}</li>
+          <li><b>Received</b> {{ item.created_date }}</li>
+          <li><b>Delay</b> {{ item.delay_ms }}ms</li>
+          <li><b>Value</b> {{ item.value }}</li>
+          <li><b>Provenance</b>
+            <ul class="provenance">
+              {% for prov in item.data_provenance %}
+                <li>{{ prov }}</li>
+              {% endfor %}
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+    {% endfor %}
   {% endif %}
 
 {% endblock content %}
