Better popup help style

--- a/es_common/templates/es_common/base.html
+++ b/es_common/templates/es_common/base.html
@@ -21,8 +21,8 @@
         <form class="d-flex">
           {% if user.is_authenticated %}
             <b class="me-2"><a href="{% url 'user-home' %}">{{ user }}</a></b>
-            <a href="{% url 'user-logout' %}">Logout</a>
-            <div class="popup-help">(?)
+            <div class="popup-help">
+              <a href="{% url 'user-logout' %}">Logout</a>
               <div class="popup card ">
                 <b>Logout</b> currently doesn't redirect properly. After you get to the CILogon page,
                 hit the back button on your browser to come back to this page, then reload.
