--- a/es_common/static/css/es-django.scss
+++ b/es_common/static/css/es-django.scss
@@ -3,23 +3,35 @@ body {
 }
 
 .popup-help {
-    display: inline;
     position: relative;
-    cursor: pointer;
-
-    & > .popup {
+    &:hover {
+        // border-color: rgb(162, 172, 218);
+        box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+    }
+    .popup {
         display: none;
         position: absolute;
         right: 0;
         top: 100%;
         width: 50%;
-        min-width: 20rem;
-        z-index: 1;
+        min-width: 30rem;
+        z-index: 1;        
         font-size: .9rem;
-        pointer-events: none;  
+        pointer-events: none;
+        padding: .25rem .5rem;
     }
-    &:hover > .popup {
+    &:hover .popup {
         display: block;
+    }
+}
+
+.list-compact {
+    list-style: none;
+    padding-left: 0;
+    line-height: 1.2;
+
+    & > li {
+        padding: .2rem 0;
     }
 }
 
