--- a/es_user/templates/es_user/user.html
+++ b/es_user/templates/es_user/user.html
@@ -12,19 +12,26 @@ pre {
 
 {% block content %}
 
-  <h2>User</h2>
+  <h3>User</h3>
 
-    {{ user }} {% if user.pk %}({{ user.pk }}){% endif %}
+    {% if user.pk %}
+      {{ user }} (#{{ user.pk }})
+      {% if user_claims %}
+        <pre>{{ user_claims|as_json }}</pre>
+      {% else %}
+        (no claims)
+      {% endif %}
+    {% endif %}
 
-  <h2>User JWT</h2>
+    <h3>User JWT</h3>
 
     {% if user_jwt %}
       <pre>{{ user_jwt|as_json }}</pre>
     {% endif %}
 
-  <h2>Cookie JWT</h2>
+  <h3>Cookie JWT</h3>
 
-    {% if cookie_jwt %}
+    {% if cookie_jwt.raw_value %}
       {% if cookie_jwt.is_valid %}Ok{% else %}Invalid{% endif %}
       <pre>{{ cookie_jwt.raw_value }}</pre>
       <pre>{{ cookie_jwt.value|as_json }}</pre>
